<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.gozdehanozturk.loginregisterwithsharedpreferences.RegisterActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userRegister"
        android:textAlignment="center"
        android:textSize="24dp"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:id="@+id/regName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userName"
        android:inputType="textPersonName"/>
    <EditText
        android:id="@+id/regSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userSurname"
        android:inputType="textPersonName"/>
    <EditText
        android:id="@+id/regMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userMail"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/regPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userPhone"
        android:inputType="phone"/>
    <EditText
        android:id="@+id/regPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userPass"
        android:inputType="numberPassword"/>

    <Button
        android:onClick="register"
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="10dp"
        android:textSize="20sp"/>
</LinearLayout>
